// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`react-graph-editor/ScrollBar with default props 1`] = `
.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #333;
  width: 16px;
  top: 0;
  right: 0;
  bottom: 16px;
  left: auto;
}

.emotion-3 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 100%;
  -webkit-flex-direction: inherit;
  -ms-flex-direction: inherit;
  flex-direction: inherit;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-3::before {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  margin: 2px;
  background: #ccc;
  border-radius: 6px;
  content: '';
}

.emotion-0 {
  position: relative;
  -webkit-flex: 0 0 16px;
  -ms-flex: 0 0 16px;
  flex: 0 0 16px;
  padding: 2px;
  border: 0;
  margin: 0;
  background: transparent;
  border-radius: 6 6 0 0px;
  cursor: row-resize;
}

.emotion-0::after {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  box-sizing: border-box;
  margin: auto;
  border-top: 1px solid;
  border-bottom: 1px solid;
  border-color: #333;
  width: 6px;
  height: 3px;
  min-height: 3px;
  content: '';
}

.emotion-1 {
  position: relative;
  -webkit-flex: 0 1 100%;
  -ms-flex: 0 1 100%;
  flex: 0 1 100%;
  padding: 2px;
  border: 0;
  margin: 0;
  background: transparent;
  border-radius: 0px;
}

.emotion-2 {
  position: relative;
  -webkit-flex: 0 0 16px;
  -ms-flex: 0 0 16px;
  flex: 0 0 16px;
  padding: 2px;
  border: 0;
  margin: 0;
  background: transparent;
  border-radius: 0 0 6 6px;
  cursor: row-resize;
}

.emotion-2::after {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  box-sizing: border-box;
  margin: auto;
  border-top: 1px solid;
  border-bottom: 1px solid;
  border-color: #333;
  width: 6px;
  height: 3px;
  min-height: 3px;
  content: '';
}

<div
  class="emotion-4"
  style="height:100vh;justify-content:flex-start"
>
  <div
    class="emotion-3"
    style="width:100%;height:100%;transform:translateY(0%)"
  >
    <button
      class="emotion-0"
      type="button"
    />
    <button
      class="emotion-1"
      type="button"
    />
    <button
      class="emotion-2"
      type="button"
    />
  </div>
</div>
`;

exports[`react-graph-editor/ScrollBar with knobs 1`] = `
.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #333;
  width: 16px;
  top: 0;
  right: 0;
  bottom: 16px;
  left: auto;
}

.emotion-3 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 100%;
  -webkit-flex-direction: inherit;
  -ms-flex-direction: inherit;
  flex-direction: inherit;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-3::before {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  margin: 2px;
  background: #ccc;
  border-radius: 6px;
  content: '';
}

.emotion-0 {
  position: relative;
  -webkit-flex: 0 0 16px;
  -ms-flex: 0 0 16px;
  flex: 0 0 16px;
  padding: 2px;
  border: 0;
  margin: 0;
  background: transparent;
  border-radius: 6 6 0 0px;
  cursor: row-resize;
}

.emotion-0::after {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  box-sizing: border-box;
  margin: auto;
  border-top: 1px solid;
  border-bottom: 1px solid;
  border-color: #333;
  width: 6px;
  height: 3px;
  min-height: 3px;
  content: '';
}

.emotion-1 {
  position: relative;
  -webkit-flex: 0 1 100%;
  -ms-flex: 0 1 100%;
  flex: 0 1 100%;
  padding: 2px;
  border: 0;
  margin: 0;
  background: transparent;
  border-radius: 0px;
}

.emotion-2 {
  position: relative;
  -webkit-flex: 0 0 16px;
  -ms-flex: 0 0 16px;
  flex: 0 0 16px;
  padding: 2px;
  border: 0;
  margin: 0;
  background: transparent;
  border-radius: 0 0 6 6px;
  cursor: row-resize;
}

.emotion-2::after {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  box-sizing: border-box;
  margin: auto;
  border-top: 1px solid;
  border-bottom: 1px solid;
  border-color: #333;
  width: 6px;
  height: 3px;
  min-height: 3px;
  content: '';
}

<div
  class="emotion-4"
  style="height:400px;margin:25vh;justify-content:flex-start"
>
  <div
    class="emotion-3"
    style="width:100%;height:50%;transform:translateY(0%)"
  >
    <button
      class="emotion-0"
      type="button"
    />
    <button
      class="emotion-1"
      type="button"
    />
    <button
      class="emotion-2"
      type="button"
    />
  </div>
</div>
`;

exports[`react-graph-editor/ScrollBar/Y-Axis/Scale 2 with progress 0 1`] = `
.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #333;
  width: 16px;
  top: 0;
  right: 0;
  bottom: 16px;
  left: auto;
}

.emotion-3 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 100%;
  -webkit-flex-direction: inherit;
  -ms-flex-direction: inherit;
  flex-direction: inherit;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-3::before {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  margin: 2px;
  background: #ccc;
  border-radius: 6px;
  content: '';
}

.emotion-0 {
  position: relative;
  -webkit-flex: 0 0 16px;
  -ms-flex: 0 0 16px;
  flex: 0 0 16px;
  padding: 2px;
  border: 0;
  margin: 0;
  background: transparent;
  border-radius: 6 6 0 0px;
  cursor: row-resize;
}

.emotion-0::after {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  box-sizing: border-box;
  margin: auto;
  border-top: 1px solid;
  border-bottom: 1px solid;
  border-color: #333;
  width: 6px;
  height: 3px;
  min-height: 3px;
  content: '';
}

.emotion-1 {
  position: relative;
  -webkit-flex: 0 1 100%;
  -ms-flex: 0 1 100%;
  flex: 0 1 100%;
  padding: 2px;
  border: 0;
  margin: 0;
  background: transparent;
  border-radius: 0px;
}

.emotion-2 {
  position: relative;
  -webkit-flex: 0 0 16px;
  -ms-flex: 0 0 16px;
  flex: 0 0 16px;
  padding: 2px;
  border: 0;
  margin: 0;
  background: transparent;
  border-radius: 0 0 6 6px;
  cursor: row-resize;
}

.emotion-2::after {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  box-sizing: border-box;
  margin: auto;
  border-top: 1px solid;
  border-bottom: 1px solid;
  border-color: #333;
  width: 6px;
  height: 3px;
  min-height: 3px;
  content: '';
}

<div
  class="emotion-4"
  style="height:100vh;justify-content:flex-start"
>
  <div
    class="emotion-3"
    style="width:100%;height:50%;transform:translateY(0%)"
  >
    <button
      class="emotion-0"
      type="button"
    />
    <button
      class="emotion-1"
      type="button"
    />
    <button
      class="emotion-2"
      type="button"
    />
  </div>
</div>
`;

exports[`react-graph-editor/ScrollBar/Y-Axis/Scale 2 with progress 0.5 1`] = `
.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #333;
  width: 16px;
  top: 0;
  right: 0;
  bottom: 16px;
  left: auto;
}

.emotion-3 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 100%;
  -webkit-flex-direction: inherit;
  -ms-flex-direction: inherit;
  flex-direction: inherit;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-3::before {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  margin: 2px;
  background: #ccc;
  border-radius: 6px;
  content: '';
}

.emotion-0 {
  position: relative;
  -webkit-flex: 0 0 16px;
  -ms-flex: 0 0 16px;
  flex: 0 0 16px;
  padding: 2px;
  border: 0;
  margin: 0;
  background: transparent;
  border-radius: 6 6 0 0px;
  cursor: row-resize;
}

.emotion-0::after {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  box-sizing: border-box;
  margin: auto;
  border-top: 1px solid;
  border-bottom: 1px solid;
  border-color: #333;
  width: 6px;
  height: 3px;
  min-height: 3px;
  content: '';
}

.emotion-1 {
  position: relative;
  -webkit-flex: 0 1 100%;
  -ms-flex: 0 1 100%;
  flex: 0 1 100%;
  padding: 2px;
  border: 0;
  margin: 0;
  background: transparent;
  border-radius: 0px;
}

.emotion-2 {
  position: relative;
  -webkit-flex: 0 0 16px;
  -ms-flex: 0 0 16px;
  flex: 0 0 16px;
  padding: 2px;
  border: 0;
  margin: 0;
  background: transparent;
  border-radius: 0 0 6 6px;
  cursor: row-resize;
}

.emotion-2::after {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  box-sizing: border-box;
  margin: auto;
  border-top: 1px solid;
  border-bottom: 1px solid;
  border-color: #333;
  width: 6px;
  height: 3px;
  min-height: 3px;
  content: '';
}

<div
  class="emotion-4"
  style="height:100vh;justify-content:flex-start"
>
  <div
    class="emotion-3"
    style="width:100%;height:50%;transform:translateY(50%)"
  >
    <button
      class="emotion-0"
      type="button"
    />
    <button
      class="emotion-1"
      type="button"
    />
    <button
      class="emotion-2"
      type="button"
    />
  </div>
</div>
`;

exports[`react-graph-editor/ScrollBar/Y-Axis/Scale 2 with progress 0.25 1`] = `
.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #333;
  width: 16px;
  top: 0;
  right: 0;
  bottom: 16px;
  left: auto;
}

.emotion-3 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 100%;
  -webkit-flex-direction: inherit;
  -ms-flex-direction: inherit;
  flex-direction: inherit;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-3::before {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  margin: 2px;
  background: #ccc;
  border-radius: 6px;
  content: '';
}

.emotion-0 {
  position: relative;
  -webkit-flex: 0 0 16px;
  -ms-flex: 0 0 16px;
  flex: 0 0 16px;
  padding: 2px;
  border: 0;
  margin: 0;
  background: transparent;
  border-radius: 6 6 0 0px;
  cursor: row-resize;
}

.emotion-0::after {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  box-sizing: border-box;
  margin: auto;
  border-top: 1px solid;
  border-bottom: 1px solid;
  border-color: #333;
  width: 6px;
  height: 3px;
  min-height: 3px;
  content: '';
}

.emotion-1 {
  position: relative;
  -webkit-flex: 0 1 100%;
  -ms-flex: 0 1 100%;
  flex: 0 1 100%;
  padding: 2px;
  border: 0;
  margin: 0;
  background: transparent;
  border-radius: 0px;
}

.emotion-2 {
  position: relative;
  -webkit-flex: 0 0 16px;
  -ms-flex: 0 0 16px;
  flex: 0 0 16px;
  padding: 2px;
  border: 0;
  margin: 0;
  background: transparent;
  border-radius: 0 0 6 6px;
  cursor: row-resize;
}

.emotion-2::after {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  box-sizing: border-box;
  margin: auto;
  border-top: 1px solid;
  border-bottom: 1px solid;
  border-color: #333;
  width: 6px;
  height: 3px;
  min-height: 3px;
  content: '';
}

<div
  class="emotion-4"
  style="height:100vh;justify-content:flex-start"
>
  <div
    class="emotion-3"
    style="width:100%;height:50%;transform:translateY(25%)"
  >
    <button
      class="emotion-0"
      type="button"
    />
    <button
      class="emotion-1"
      type="button"
    />
    <button
      class="emotion-2"
      type="button"
    />
  </div>
</div>
`;

exports[`react-graph-editor/ScrollBar/Y-Axis/Scale 2 with progress 0.75 1`] = `
.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #333;
  width: 16px;
  top: 0;
  right: 0;
  bottom: 16px;
  left: auto;
}

.emotion-3 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 100%;
  -webkit-flex-direction: inherit;
  -ms-flex-direction: inherit;
  flex-direction: inherit;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-3::before {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  margin: 2px;
  background: #ccc;
  border-radius: 6px;
  content: '';
}

.emotion-0 {
  position: relative;
  -webkit-flex: 0 0 16px;
  -ms-flex: 0 0 16px;
  flex: 0 0 16px;
  padding: 2px;
  border: 0;
  margin: 0;
  background: transparent;
  border-radius: 6 6 0 0px;
  cursor: row-resize;
}

.emotion-0::after {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  box-sizing: border-box;
  margin: auto;
  border-top: 1px solid;
  border-bottom: 1px solid;
  border-color: #333;
  width: 6px;
  height: 3px;
  min-height: 3px;
  content: '';
}

.emotion-1 {
  position: relative;
  -webkit-flex: 0 1 100%;
  -ms-flex: 0 1 100%;
  flex: 0 1 100%;
  padding: 2px;
  border: 0;
  margin: 0;
  background: transparent;
  border-radius: 0px;
}

.emotion-2 {
  position: relative;
  -webkit-flex: 0 0 16px;
  -ms-flex: 0 0 16px;
  flex: 0 0 16px;
  padding: 2px;
  border: 0;
  margin: 0;
  background: transparent;
  border-radius: 0 0 6 6px;
  cursor: row-resize;
}

.emotion-2::after {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  box-sizing: border-box;
  margin: auto;
  border-top: 1px solid;
  border-bottom: 1px solid;
  border-color: #333;
  width: 6px;
  height: 3px;
  min-height: 3px;
  content: '';
}

<div
  class="emotion-4"
  style="height:100vh;justify-content:flex-end"
>
  <div
    class="emotion-3"
    style="width:100%;height:50%;transform:translateY(-25%)"
  >
    <button
      class="emotion-0"
      type="button"
    />
    <button
      class="emotion-1"
      type="button"
    />
    <button
      class="emotion-2"
      type="button"
    />
  </div>
</div>
`;

exports[`react-graph-editor/ScrollBar/Y-Axis/Scale 2 with progress 1 1`] = `
.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #333;
  width: 16px;
  top: 0;
  right: 0;
  bottom: 16px;
  left: auto;
}

.emotion-3 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 100%;
  -webkit-flex-direction: inherit;
  -ms-flex-direction: inherit;
  flex-direction: inherit;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-3::before {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  margin: 2px;
  background: #ccc;
  border-radius: 6px;
  content: '';
}

.emotion-0 {
  position: relative;
  -webkit-flex: 0 0 16px;
  -ms-flex: 0 0 16px;
  flex: 0 0 16px;
  padding: 2px;
  border: 0;
  margin: 0;
  background: transparent;
  border-radius: 6 6 0 0px;
  cursor: row-resize;
}

.emotion-0::after {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  box-sizing: border-box;
  margin: auto;
  border-top: 1px solid;
  border-bottom: 1px solid;
  border-color: #333;
  width: 6px;
  height: 3px;
  min-height: 3px;
  content: '';
}

.emotion-1 {
  position: relative;
  -webkit-flex: 0 1 100%;
  -ms-flex: 0 1 100%;
  flex: 0 1 100%;
  padding: 2px;
  border: 0;
  margin: 0;
  background: transparent;
  border-radius: 0px;
}

.emotion-2 {
  position: relative;
  -webkit-flex: 0 0 16px;
  -ms-flex: 0 0 16px;
  flex: 0 0 16px;
  padding: 2px;
  border: 0;
  margin: 0;
  background: transparent;
  border-radius: 0 0 6 6px;
  cursor: row-resize;
}

.emotion-2::after {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  box-sizing: border-box;
  margin: auto;
  border-top: 1px solid;
  border-bottom: 1px solid;
  border-color: #333;
  width: 6px;
  height: 3px;
  min-height: 3px;
  content: '';
}

<div
  class="emotion-4"
  style="height:100vh;justify-content:flex-end"
>
  <div
    class="emotion-3"
    style="width:100%;height:50%;transform:translateY(0%)"
  >
    <button
      class="emotion-0"
      type="button"
    />
    <button
      class="emotion-1"
      type="button"
    />
    <button
      class="emotion-2"
      type="button"
    />
  </div>
</div>
`;

exports[`react-graph-editor/ScrollBar/Y-Axis/Scale 10 with progress 0 1`] = `
.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #333;
  width: 16px;
  top: 0;
  right: 0;
  bottom: 16px;
  left: auto;
}

.emotion-3 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 100%;
  -webkit-flex-direction: inherit;
  -ms-flex-direction: inherit;
  flex-direction: inherit;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-3::before {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  margin: 2px;
  background: #ccc;
  border-radius: 6px;
  content: '';
}

.emotion-0 {
  position: relative;
  -webkit-flex: 0 0 16px;
  -ms-flex: 0 0 16px;
  flex: 0 0 16px;
  padding: 2px;
  border: 0;
  margin: 0;
  background: transparent;
  border-radius: 6 6 0 0px;
  cursor: row-resize;
}

.emotion-0::after {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  box-sizing: border-box;
  margin: auto;
  border-top: 1px solid;
  border-bottom: 1px solid;
  border-color: #333;
  width: 6px;
  height: 3px;
  min-height: 3px;
  content: '';
}

.emotion-1 {
  position: relative;
  -webkit-flex: 0 1 100%;
  -ms-flex: 0 1 100%;
  flex: 0 1 100%;
  padding: 2px;
  border: 0;
  margin: 0;
  background: transparent;
  border-radius: 0px;
}

.emotion-2 {
  position: relative;
  -webkit-flex: 0 0 16px;
  -ms-flex: 0 0 16px;
  flex: 0 0 16px;
  padding: 2px;
  border: 0;
  margin: 0;
  background: transparent;
  border-radius: 0 0 6 6px;
  cursor: row-resize;
}

.emotion-2::after {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  box-sizing: border-box;
  margin: auto;
  border-top: 1px solid;
  border-bottom: 1px solid;
  border-color: #333;
  width: 6px;
  height: 3px;
  min-height: 3px;
  content: '';
}

<div
  class="emotion-4"
  style="height:100vh;justify-content:flex-start"
>
  <div
    class="emotion-3"
    style="width:100%;height:10%;transform:translateY(0%)"
  >
    <button
      class="emotion-0"
      type="button"
    />
    <button
      class="emotion-1"
      type="button"
    />
    <button
      class="emotion-2"
      type="button"
    />
  </div>
</div>
`;

exports[`react-graph-editor/ScrollBar/Y-Axis/Scale 10 with progress 0.5 1`] = `
.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #333;
  width: 16px;
  top: 0;
  right: 0;
  bottom: 16px;
  left: auto;
}

.emotion-3 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 100%;
  -webkit-flex-direction: inherit;
  -ms-flex-direction: inherit;
  flex-direction: inherit;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-3::before {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  margin: 2px;
  background: #ccc;
  border-radius: 6px;
  content: '';
}

.emotion-0 {
  position: relative;
  -webkit-flex: 0 0 16px;
  -ms-flex: 0 0 16px;
  flex: 0 0 16px;
  padding: 2px;
  border: 0;
  margin: 0;
  background: transparent;
  border-radius: 6 6 0 0px;
  cursor: row-resize;
}

.emotion-0::after {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  box-sizing: border-box;
  margin: auto;
  border-top: 1px solid;
  border-bottom: 1px solid;
  border-color: #333;
  width: 6px;
  height: 3px;
  min-height: 3px;
  content: '';
}

.emotion-1 {
  position: relative;
  -webkit-flex: 0 1 100%;
  -ms-flex: 0 1 100%;
  flex: 0 1 100%;
  padding: 2px;
  border: 0;
  margin: 0;
  background: transparent;
  border-radius: 0px;
}

.emotion-2 {
  position: relative;
  -webkit-flex: 0 0 16px;
  -ms-flex: 0 0 16px;
  flex: 0 0 16px;
  padding: 2px;
  border: 0;
  margin: 0;
  background: transparent;
  border-radius: 0 0 6 6px;
  cursor: row-resize;
}

.emotion-2::after {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  box-sizing: border-box;
  margin: auto;
  border-top: 1px solid;
  border-bottom: 1px solid;
  border-color: #333;
  width: 6px;
  height: 3px;
  min-height: 3px;
  content: '';
}

<div
  class="emotion-4"
  style="height:100vh;justify-content:flex-start"
>
  <div
    class="emotion-3"
    style="width:100%;height:10%;transform:translateY(450%)"
  >
    <button
      class="emotion-0"
      type="button"
    />
    <button
      class="emotion-1"
      type="button"
    />
    <button
      class="emotion-2"
      type="button"
    />
  </div>
</div>
`;

exports[`react-graph-editor/ScrollBar/Y-Axis/Scale 10 with progress 0.25 1`] = `
.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #333;
  width: 16px;
  top: 0;
  right: 0;
  bottom: 16px;
  left: auto;
}

.emotion-3 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 100%;
  -webkit-flex-direction: inherit;
  -ms-flex-direction: inherit;
  flex-direction: inherit;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-3::before {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  margin: 2px;
  background: #ccc;
  border-radius: 6px;
  content: '';
}

.emotion-0 {
  position: relative;
  -webkit-flex: 0 0 16px;
  -ms-flex: 0 0 16px;
  flex: 0 0 16px;
  padding: 2px;
  border: 0;
  margin: 0;
  background: transparent;
  border-radius: 6 6 0 0px;
  cursor: row-resize;
}

.emotion-0::after {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  box-sizing: border-box;
  margin: auto;
  border-top: 1px solid;
  border-bottom: 1px solid;
  border-color: #333;
  width: 6px;
  height: 3px;
  min-height: 3px;
  content: '';
}

.emotion-1 {
  position: relative;
  -webkit-flex: 0 1 100%;
  -ms-flex: 0 1 100%;
  flex: 0 1 100%;
  padding: 2px;
  border: 0;
  margin: 0;
  background: transparent;
  border-radius: 0px;
}

.emotion-2 {
  position: relative;
  -webkit-flex: 0 0 16px;
  -ms-flex: 0 0 16px;
  flex: 0 0 16px;
  padding: 2px;
  border: 0;
  margin: 0;
  background: transparent;
  border-radius: 0 0 6 6px;
  cursor: row-resize;
}

.emotion-2::after {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  box-sizing: border-box;
  margin: auto;
  border-top: 1px solid;
  border-bottom: 1px solid;
  border-color: #333;
  width: 6px;
  height: 3px;
  min-height: 3px;
  content: '';
}

<div
  class="emotion-4"
  style="height:100vh;justify-content:flex-start"
>
  <div
    class="emotion-3"
    style="width:100%;height:10%;transform:translateY(225%)"
  >
    <button
      class="emotion-0"
      type="button"
    />
    <button
      class="emotion-1"
      type="button"
    />
    <button
      class="emotion-2"
      type="button"
    />
  </div>
</div>
`;

exports[`react-graph-editor/ScrollBar/Y-Axis/Scale 10 with progress 0.75 1`] = `
.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #333;
  width: 16px;
  top: 0;
  right: 0;
  bottom: 16px;
  left: auto;
}

.emotion-3 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 100%;
  -webkit-flex-direction: inherit;
  -ms-flex-direction: inherit;
  flex-direction: inherit;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-3::before {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  margin: 2px;
  background: #ccc;
  border-radius: 6px;
  content: '';
}

.emotion-0 {
  position: relative;
  -webkit-flex: 0 0 16px;
  -ms-flex: 0 0 16px;
  flex: 0 0 16px;
  padding: 2px;
  border: 0;
  margin: 0;
  background: transparent;
  border-radius: 6 6 0 0px;
  cursor: row-resize;
}

.emotion-0::after {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  box-sizing: border-box;
  margin: auto;
  border-top: 1px solid;
  border-bottom: 1px solid;
  border-color: #333;
  width: 6px;
  height: 3px;
  min-height: 3px;
  content: '';
}

.emotion-1 {
  position: relative;
  -webkit-flex: 0 1 100%;
  -ms-flex: 0 1 100%;
  flex: 0 1 100%;
  padding: 2px;
  border: 0;
  margin: 0;
  background: transparent;
  border-radius: 0px;
}

.emotion-2 {
  position: relative;
  -webkit-flex: 0 0 16px;
  -ms-flex: 0 0 16px;
  flex: 0 0 16px;
  padding: 2px;
  border: 0;
  margin: 0;
  background: transparent;
  border-radius: 0 0 6 6px;
  cursor: row-resize;
}

.emotion-2::after {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  box-sizing: border-box;
  margin: auto;
  border-top: 1px solid;
  border-bottom: 1px solid;
  border-color: #333;
  width: 6px;
  height: 3px;
  min-height: 3px;
  content: '';
}

<div
  class="emotion-4"
  style="height:100vh;justify-content:flex-end"
>
  <div
    class="emotion-3"
    style="width:100%;height:10%;transform:translateY(-225%)"
  >
    <button
      class="emotion-0"
      type="button"
    />
    <button
      class="emotion-1"
      type="button"
    />
    <button
      class="emotion-2"
      type="button"
    />
  </div>
</div>
`;

exports[`react-graph-editor/ScrollBar/Y-Axis/Scale 10 with progress 1 1`] = `
.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: #333;
  width: 16px;
  top: 0;
  right: 0;
  bottom: 16px;
  left: auto;
}

.emotion-3 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  height: 100%;
  -webkit-flex-direction: inherit;
  -ms-flex-direction: inherit;
  flex-direction: inherit;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-3::before {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  margin: 2px;
  background: #ccc;
  border-radius: 6px;
  content: '';
}

.emotion-0 {
  position: relative;
  -webkit-flex: 0 0 16px;
  -ms-flex: 0 0 16px;
  flex: 0 0 16px;
  padding: 2px;
  border: 0;
  margin: 0;
  background: transparent;
  border-radius: 6 6 0 0px;
  cursor: row-resize;
}

.emotion-0::after {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  box-sizing: border-box;
  margin: auto;
  border-top: 1px solid;
  border-bottom: 1px solid;
  border-color: #333;
  width: 6px;
  height: 3px;
  min-height: 3px;
  content: '';
}

.emotion-1 {
  position: relative;
  -webkit-flex: 0 1 100%;
  -ms-flex: 0 1 100%;
  flex: 0 1 100%;
  padding: 2px;
  border: 0;
  margin: 0;
  background: transparent;
  border-radius: 0px;
}

.emotion-2 {
  position: relative;
  -webkit-flex: 0 0 16px;
  -ms-flex: 0 0 16px;
  flex: 0 0 16px;
  padding: 2px;
  border: 0;
  margin: 0;
  background: transparent;
  border-radius: 0 0 6 6px;
  cursor: row-resize;
}

.emotion-2::after {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  box-sizing: border-box;
  margin: auto;
  border-top: 1px solid;
  border-bottom: 1px solid;
  border-color: #333;
  width: 6px;
  height: 3px;
  min-height: 3px;
  content: '';
}

<div
  class="emotion-4"
  style="height:100vh;justify-content:flex-end"
>
  <div
    class="emotion-3"
    style="width:100%;height:10%;transform:translateY(0%)"
  >
    <button
      class="emotion-0"
      type="button"
    />
    <button
      class="emotion-1"
      type="button"
    />
    <button
      class="emotion-2"
      type="button"
    />
  </div>
</div>
`;
